--- a/config/rable_v2.conf
+++ b/config/rable_v2.conf
@@ -1,3 +1,7 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+
+# Enable underglow
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
