--- a/config/rable_v2.conf
+++ b/config/rable_v2.conf
@@ -5,3 +5,4 @@ CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 # Enable underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
