--- a/config/rable_v2.conf
+++ b/config/rable_v2.conf
@@ -1,8 +1,8 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 
 # Enable underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
